# sdk-nrf

./: west.yml
samples/: CMakeLists.txt
samples/wifi/shell/: CMakeLists.txt  overlay-zperf.conf  prj.conf  sample.yaml
samples/wifi/shell/inc/: wfa_agtctrl.h  wfa_ca.h  wfa_cmds.h  wfa_debug.h  wfa_main.h  wfa_miscs.h  wfa_portall.h  wfa_rsp.h  wfa_sock.h  wfa_stdincs.h  wfa_tg.h  wfa_tlv.h  wfa_ver.h
samples/wifi/shell/src/: wfa_dut_shell.c  wifi_main.c  wifi_shell.c
samples/wifi/shell/src/dut/: wfa_ca_resp.c  wfa_cmdproc.c  wfa_cmdtbl.c  wfa_cs.c  wfa_dut.c  wfa_dut.h  wfa_dut_init.c  wfa_miscs.c  wfa_sock.c  wfa_tg.c  wfa_thr.c  wfa_tlv.c  wfa_typestr.c  wfa_wmmps.c
samples/wifi/shell/wfa_zephyr_ca/: CONTRIBUTING.md  Makefile.inc  cert.conf  init.sh  init_wfa.sh  log  log5.txt  marvell_after_insmod.txt  marvell_ap_after_roaming.txt  serial_agent  serial_agent_working_bkp  serial_agent_workingrxtx  test_11ax.sh  version.txt  wfa_ca  wfa_ca_modified.c  wfa_ca_org.c  wfa_dut  wfacabkp_.c  wpa2.conf  zephyr_DUT_txrxworking.hex  zephyr_nov17_rcvbuf8.hex  zephyr_nov23_REVA.hex  zephyr_nov24_1.hex  zephyr_nov24_ping.hex  zephyr_nov24_tx.hex  zephyr_wfadut_nov25_REVA.hex
samples/wifi/shell/wfa_zephyr_ca/WTGService/: WTG
samples/wifi/shell/wfa_zephyr_ca/ca/: serial_agent  wfa_ca  wfa_ca.c
samples/wifi/shell/wfa_zephyr_ca/console_src/: wfa_con
samples/wifi/shell/wfa_zephyr_ca/dut/: wfa_dut  wfa_dut.c
samples/wifi/shell/wfa_zephyr_ca/inc/: wfa_cmds.h  wfa_main.h  wfa_portall.h  wfa_rsp.h  wfa_types.h
samples/wifi/shell/wfa_zephyr_ca/lib/: wfa_ca_resp.c  wfa_cmdproc.c  wfa_cmdtbl.c  wfa_cs.c  wfa_sock.c  wfa_tg.c  wfa_thr.c  wfa_tlv.c  wfa_typestr.c
subsys/: Kconfig
subsys/wfa_dut/: CMakeLists.txt  Kconfig
subsys/wfa_dut/inc/: wfa_agt.h  wfa_ca_resp.h  wfa_main.h  wfa_miscs.h  wfa_portall.h  wfa_rsp.h  wfa_stdincs.h  wfa_tlv.h  wfa_tlv_old.h  wfa_types.h  wfa_utils.h  wfa_wmmps.h
subsys/wfa_dut/src/: wfa_shell.c
subsys/wfa_dut/src/dut/: wfa_ca_resp.c  wfa_cmdproc.c  wfa_cmdtbl.c  wfa_cs.c  wfa_dut.c  wfa_dut_init.c  wfa_tg.c  wfa_thr.c  wfa_tlv.c  wfa_typestr.c  wfa_wmmps.c
(+75 files in other folders)
